[Fix] title contact on mobile

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -152,7 +152,7 @@
 
 @media only screen and (max-width: 600px) {
   .title-contact {
-    font-size: 40px;
+    font-size: 35px;
   }
 
   .site-form {
